--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoPIE">
         <activity
-            android:name=".ActivityPreguntas1"
+            android:name=".ActivityPreguntas"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             />
